[API][User] Not working create endpoint
